# 1bilhaodelinhasaovivo

./: .gitignore  README.md  compare.py  create_measurements.py  etl.py  etl_duckdb.py  etl_python.py  load.py  main.py  pyproject.toml
dashboard/: meu_dashboard_correto.py  meu_dashboard_errado.py
data/: measurements_summary.parquet  weather_stations.csv
pipeline_duckdb/: using_duckdb.py  using_duckdb_to_save_parquet.py
pipeline_pandas/: compare.py
src/: create_measurements.py  using_pandas.py  using_pandas_2.py  using_pandas_chunk.py  using_polars.py  using_polars_loguru.py  using_python_old.py
